--- a/UI_assets/less/custom-breadcrumb.less
+++ b/UI_assets/less/custom-breadcrumb.less
@@ -9,6 +9,9 @@
     .breakpoint_768({
         display: block;
     });
+    >.container{
+        max-width:1200;
+    }
 }
 .breadcrumb {
     background: #fff;
